panoiq_stackstorm/microservice/manifests/service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: airflow-service
  labels:
    app: airflow-service
spec:
  type: ClusterIP
  ports:
   - port: 32219 
     #nodePort: 32209
     targetPort: 8083
  selector:
   app: airflow-service


---
apiVersion: v1
kind: Service
metadata:
  name: control-service
  labels:
    app: control-service
spec:
  type: ClusterIP
  ports:
   - port: 35014
     targetPort: 8085
  selector:
   app: control-service


---
apiVersion: v1
kind: Service
metadata:
  name: create-service
  labels:
    app: create-service
spec:
  ports:
   - port: 34004
     targetPort: 8082
  selector:
   app: create-service


---
apiVersion: v1
kind: Service
metadata:
  name: file-service
  labels:
    app: file-service
spec:
  ports:
  - name: http
    port: 30013
  selector:
    app: file-service
  type: ClusterIP


---
apiVersion: v1
kind: Service
metadata:
  name: minio-service
  labels:
    app: minio-service
spec:
  type: ClusterIP
  ports:
   - port: 32024
     targetPort: 8084
  selector:
   app: minio-service


---
apiVersion: v1
kind: Service
metadata:
  name: panoiq-nodemailer-service
  labels:
    app: panoiq-nodemailer-service
spec:
  ports:
  - name: http
    port: 30022
  - name: grpc
    port: 30023
  selector:
    app: panoiq-nodemailer-service
  type: ClusterIP


---
  apiVersion: "v1"
  kind: "Service"
  metadata: 
    name: "panoiq-file-storage"
    labels: 
      app: "panoiq-file-storage"
  spec: 
    ports: 
      - 
        port: 34000
        targetPort: 80
    selector: 
      app: "panoiq-file-storage"


---
apiVersion: v1
kind: Service
metadata:
  name: panoiq-notification
  labels:
    app: panoiq-notification
spec:
  ports:
  - name: http
    port: 55205
  - name: grpc
    port: 30111
  selector:
    app: panoiq-notification
  type: ClusterIP



---
apiVersion: v1
kind: Service
metadata:
  name: rbac-service
  labels:
    app: rbac-service
spec:
  ports:
   - port: 34005
     targetPort: 8081 
  selector:
   app: rbac
