panoiq_stackstorm/microservice/manifests/ingress.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: airflow-service-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /$1
spec:
  rules:
    - host: APP_HOST
      http:
        paths:
          - path: /airflow-ms/(.*)
            pathType: Prefix
            backend:
              service:
                name: airflow-service
                port:
                  number: 32219
  ingressClassName: nginx

---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: control-user 
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /$1
spec:
  rules:
    - host: APP_HOST
      http:
        paths:
          - path: /control-ms/(.*)
            pathType: Prefix
            backend:
              service:
                name: control-service
                port:
                  number: 35014
  ingressClassName: nginx

---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: create-service
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /$1
spec:
  rules:
    - host: APP_HOST
      http:
        paths:
          - path: /create-ms/(.*)
            pathType: Prefix
            backend:
              service:
                name: create-service
                port: 
                  number: 34004
  ingressClassName: nginx


---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: minio-service-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /$1
spec:
  rules:
    - host: APP_HOST
      http:
        paths:
          - path: /minio-ms/(.*)
            pathType: Prefix
            backend:
              service:
                name: minio-service
                port:
                  number: 32024
  ingressClassName: nginx


---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /$1
  name: nodemailer-svc
spec:
  ingressClassName: nginx
  rules:
  - host: APP_HOST
    http:
      paths:
      - backend:
          service:
            name: panoiq-nodemailer-service
            port:
              number: 30022
        path: /email-nodemailer-staging/api/(.*)
        pathType: Prefix


---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: notification-svc
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /$1
spec:
  rules:
    - host: APP_HOST
      http:
        paths:
          - path: /panoiq-notifications-staging/api/(.*)
            pathType: Prefix
            backend:
              service:
                name: panoiq-notification 
                port: 
                  number: 55205
  ingressClassName: nginx


---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: rbac-service  
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /$1
spec:
  rules:
    - host: APP_HOST
      http:
        paths:
          - path: /rbac-ms/(.*)
            pathType: Prefix
            backend:
              service:
                name: rbac-service-staging
                port: 
                  number: 34005
  ingressClassName: nginx
